test_regress/t/t_typedef_circ_bad.out
%Error: t/t_typedef_circ_bad.v:5: Typedef's type is circular: a_t
%Error: Exiting due to
