test_regress/t/t_typedef_circ_bad.v
// This file ONLY is placed into the Public Domain, for any use,
// without warranty, 2019 by Wilson Snyder

typedef a_t;
typedef a_t b_t;
typedef b_t a_t;
